add table in table one

--- a/frontend/before_login/table_one/pendidikan.html
+++ b/frontend/before_login/table_one/pendidikan.html
@@ -99,7 +99,7 @@
                             </span>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="../index.html">
+                            <a href="../index.html">
                                 <i class="fas fa-tachometer-alt"></i>
                                 <p>Dashboard</p>
                             </a>
@@ -131,110 +131,63 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="#sidebarLayouts">
-                                <i class="fas fa-th-list"></i>
-                                <p>Sidebar Layouts</p>
+                            <a data-toggle="collapse" href="#table_two">
+                                <i class="fas fa-user-graduate"></i>
+                                <p>Mahasiswa</p>
                                 <span class="caret"></span>
                             </a>
-                            <div class="collapse" id="sidebarLayouts">
+                            <div class="collapse" id="table_two">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="sidebar-style-1.html">
-                                            <span class="sub-item">Sidebar Style 1</span>
+                                        <a href="pendidikan.html">
+                                            <span class="sub-item">Seleksi Mahasiswa</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="overlay-sidebar.html">
-                                            <span class="sub-item">Overlay Sidebar</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="compact-sidebar.html">
-                                            <span class="sub-item">Compact Sidebar</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="static-sidebar.html">
-                                            <span class="sub-item">Static Sidebar</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="icon-menu.html">
-                                            <span class="sub-item">Icon Menu</span>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Mahasiswa Asing</span>
                                         </a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="#forms">
-                                <i class="fas fa-pen-square"></i>
-                                <p>Forms</p>
+                            <a data-toggle="collapse" href="#table_three">
+                                <i class="fas fa-chalkboard-teacher"></i>
+                                <p>Dosen</p>
                                 <span class="caret"></span>
                             </a>
-                            <div class="collapse" id="forms">
+                            <div class="collapse" id="table_three">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="../forms/forms.html">
-                                            <span class="sub-item">Basic Form</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a data-toggle="collapse" href="#tables">
-                                <i class="fas fa-table"></i>
-                                <p>Tables</p>
-                                <span class="caret"></span>
-                            </a>
-                            <div class="collapse" id="tables">
-                                <ul class="nav nav-collapse">
-                                    <li>
-                                        <a href="tables/tables.html">
-                                            <span class="sub-item">Basic Table</span>
+                                        <a href="pendidikan.html">
+                                            <span class="sub-item"> Dosen Tetap Perguruan Tinggi</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="tables/datatables.html">
-                                            <span class="sub-item">Datatables</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a data-toggle="collapse" href="#maps">
-                                <i class="fas fa-map-marker-alt"></i>
-                                <p>Maps</p>
-                                <span class="caret"></span>
-                            </a>
-                            <div class="collapse" id="maps">
-                                <ul class="nav nav-collapse">
-                                    <li>
-                                        <a href="maps/jqvmap.html">
-                                            <span class="sub-item">JQVMap</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a data-toggle="collapse" href="#charts">
-                                <i class="far fa-chart-bar"></i>
-                                <p>Charts</p>
-                                <span class="caret"></span>
-                            </a>
-                            <div class="collapse" id="charts">
-                                <ul class="nav nav-collapse">
-                                    <li>
-                                        <a href="charts/charts.html">
-                                            <span class="sub-item">Chart Js</span>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Dosen Pembimbing Utama Tugas Akhir</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="charts/sparkline.html">
-                                            <span class="sub-item">Sparkline</span>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Ekuivalen Waktu Mengajar Penuh (EWMP) Dosen Tetap
+                                                Perguruan Tinggi</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Dosen Tidak Tetap</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Dosen Industri/Praktisi</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Pengakuan/Rekognisi Dosen</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -283,7 +236,42 @@
                                     <div class="card-title">Kerjasama Tridharma - Pendidikan</div>
                                 </div>
                                 <div class="card-body">
-
+                                    <table
+                                        class="table table-bordered table-responsive border-top border-left border-right table-add"
+                                        style="white-space: nowrap;">
+                                        <thead align="center">
+                                            <th rowspan="2">No</th>
+                                            <th rowspan="2">Lembaga Mitra</th>
+                                            <th colspan="3">Tingkat *)</th>
+                                            <th rowspan="2">Judul Kegiatan Kerjasama</th>
+                                            <th rowspan="2">Manfaat bagi PS yang Diakreditasi</th>
+                                            <th rowspan="2">Waktu dan Durasi</th>
+                                            <th rowspan="2">Bukti Kerjasama</th>
+                                            <th rowspan="2">Tahun Berakhirnya Kerjasama (YYYY)</th>
+                                            <tr>
+                                                <th>Internasional</th>
+                                                <th>Nasional</th>
+                                                <th>Wilayah</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>Nuvoton Technology Corporation</td>
+                                                <td align="center">✅</td>
+                                                <td></td>
+                                                <td></td>
+                                                <td>Nuvoton Academic Program</td>
+                                                <td>Peningkatan Perbaikan materi Pembelajaran Matakuliah Computer and
+                                                    Device</td>
+                                                <td>2016-2018 , (2 Tahun)</td>
+                                                <td>Bukti Penyerahan 20 Mikrokontroler, Sertifikat Training of Trainer
+                                                </td>
+                                                <td>2018
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
