--- a/frontend/before_login/table_one/penelitian.html
+++ b/frontend/before_login/table_one/penelitian.html
@@ -41,7 +41,7 @@
             <!-- Logo Header -->
             <div class="logo-header" data-background-color="dark2">
 
-                <a href="index.html" class="logo">
+                <a href="../index.html" class="logo">
                     <img src="/assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
                 </a>
                 <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
@@ -99,7 +99,7 @@
                             </span>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="../index.html">
+                            <a href="../index.html">
                                 <i class="fas fa-tachometer-alt"></i>
                                 <p>Dashboard</p>
                             </a>
@@ -117,7 +117,7 @@
                                             <span class="sub-item">Pendidikan</span>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li class="">
                                         <a href="penelitian.html">
                                             <span class="sub-item">Penelitian</span>
                                         </a>
@@ -237,7 +237,42 @@
                                     <div class="card-title">Kerjasama Tridharma - Penelitian</div>
                                 </div>
                                 <div class="card-body">
-
+                                    <table
+                                        class="table table-bordered table-responsive border-top border-left border-right table-add"
+                                        style="white-space: nowrap;">
+                                        <thead align="center">
+                                            <th rowspan="2">No</th>
+                                            <th rowspan="2">Lembaga Mitra</th>
+                                            <th colspan="3">Tingkat *)</th>
+                                            <th rowspan="2">Judul Kegiatan Kerjasama</th>
+                                            <th rowspan="2">Manfaat bagi PS yang Diakreditasi</th>
+                                            <th rowspan="2">Waktu dan Durasi</th>
+                                            <th rowspan="2">Bukti Kerjasama</th>
+                                            <th rowspan="2">Tahun Berakhirnya Kerjasama (YYYY)</th>
+                                            <tr>
+                                                <th>Internasional</th>
+                                                <th>Nasional</th>
+                                                <th>Wilayah</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>1</td>
+                                                <td>Nuvoton Technology Corporation</td>
+                                                <td align="center">✅</td>
+                                                <td></td>
+                                                <td></td>
+                                                <td>Nuvoton Academic Program</td>
+                                                <td>Peningkatan Perbaikan materi Pembelajaran Matakuliah Computer and
+                                                    Device</td>
+                                                <td>2016-2018 , (2 Tahun)</td>
+                                                <td>Bukti Penyerahan 20 Mikrokontroler, Sertifikat Training of Trainer
+                                                </td>
+                                                <td>2018
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
