--- a/frontend/before_login/index.html
+++ b/frontend/before_login/index.html
@@ -39,7 +39,7 @@
     <div class="wrapper">
         <div class="main-header">
             <!-- Logo Header -->
-            <div class="logo-header" data-background-color="dark2">
+            <div class="logo-header" data-background-color="dark">
 
                 <a href="index.html" class="logo">
                     <img src="/assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
@@ -60,8 +60,7 @@
             <!-- End Logo Header -->
 
             <!-- Navbar Header -->
-            <nav class="navbar navbar-header navbar-expand-lg" data-background-color="dark">
-
+            <nav class="navbar navbar-header navbar-expand-lg">
                 <div class="container-fluid">
                     <div class="collapse" id="search-nav">
                         <form class="navbar-left navbar-form nav-search mr-md-3">
@@ -99,8 +98,8 @@
                             </span>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="../index.html">
-                                <i class="fas fa-tachometer-alt"></i>
+                            <a href="index.html">
+                                <i class="fas fa-tachometer-alt active"></i>
                                 <p>Dashboard</p>
                             </a>
                         </li>
@@ -131,117 +130,182 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="#sidebarLayouts">
-                                <i class="fas fa-th-list"></i>
-                                <p>Sidebar Layouts</p>
+                            <a data-toggle="collapse" href="#table_two">
+                                <i class="fas fa-user-graduate"></i>
+                                <p>Mahasiswa</p>
                                 <span class="caret"></span>
                             </a>
-                            <div class="collapse" id="sidebarLayouts">
+                            <div class="collapse" id="table_two">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="sidebar-style-1.html">
-                                            <span class="sub-item">Sidebar Style 1</span>
+                                        <a href="pendidikan.html">
+                                            <span class="sub-item">Seleksi Mahasiswa</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="overlay-sidebar.html">
-                                            <span class="sub-item">Overlay Sidebar</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="compact-sidebar.html">
-                                            <span class="sub-item">Compact Sidebar</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="static-sidebar.html">
-                                            <span class="sub-item">Static Sidebar</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="icon-menu.html">
-                                            <span class="sub-item">Icon Menu</span>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Mahasiswa Asing</span>
                                         </a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="#forms">
-                                <i class="fas fa-pen-square"></i>
-                                <p>Forms</p>
+                            <a data-toggle="collapse" href="#table_three">
+                                <i class="fas fa-chalkboard-teacher"></i>
+                                <p>Dosen</p>
                                 <span class="caret"></span>
                             </a>
-                            <div class="collapse" id="forms">
+                            <div class="collapse" id="table_three">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="../forms/forms.html">
-                                            <span class="sub-item">Basic Form</span>
+                                        <a href="pendidikan.html">
+                                            <span class="sub-item"> Dosen Tetap Perguruan Tinggi</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Dosen Pembimbing Utama Tugas Akhir</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Ekuivalen Waktu Mengajar Penuh (EWMP) Dosen Tetap
+                                                Perguruan Tinggi</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Dosen Tidak Tetap</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Dosen Industri/Praktisi</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Pengakuan/Rekognisi Dosen</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Penelitian DTPS</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">PkM DTPS</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Publikasi Ilmiah DTPS</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Pagelaran/Pameran/Presentasi/Publikasi Ilmiah
+                                                DTPS</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Karya Ilmiah DTPS yang Disitasi</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Produk/Jasa DTPS yang Diadopsi oleh
+                                                Industri/Masyarakat</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Paten, Paten
+                                                Sederhana)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Hak Cipta,
+                                                Desain Produk Industri, dll.)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - Teknologi Tepat Guna,
+                                                Produk, Karya Seni, Rekayasa Sosial</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - Buku ber-ISBN, Book
+                                                Chapter</span>
                                         </a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="#tables">
-                                <i class="fas fa-table"></i>
-                                <p>Tables</p>
+                            <a href="#">
+                                <i class="fas fa-money-bill-alt"></i>
+                                <p>Penggunaan Dana</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a data-toggle="collapse" href="#table_five">
+                                <i class="fas fa-book-reader"></i>
+                                <p>Kurikulum</p>
                                 <span class="caret"></span>
                             </a>
-                            <div class="collapse" id="tables">
+                            <div class="collapse" id="table_five">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="tables/tables.html">
-                                            <span class="sub-item">Basic Table</span>
+                                        <a href="pendidikan.html">
+                                            <span class="sub-item">Kurikulum, Capaian Pembelajaran, dan Rencana
+                                                Pembelajaran</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="tables/datatables.html">
-                                            <span class="sub-item">Datatables</span>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Integrasi Kegiatan Penelitian/PkM dalam
+                                                Pembelajaran</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Kepuasan Mahasiswa</span>
                                         </a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="#maps">
-                                <i class="fas fa-map-marker-alt"></i>
-                                <p>Maps</p>
+                            <a data-toggle="collapse" href="#table_six">
+                                <i class="fas fa-bookmark"></i>
+                                <p>Penelitian</p>
                                 <span class="caret"></span>
                             </a>
-                            <div class="collapse" id="maps">
+                            <div class="collapse" id="table_six">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="maps/jqvmap.html">
-                                            <span class="sub-item">JQVMap</span>
+                                        <a href="pendidikan.html">
+                                            <span class="sub-item">Penelitian DTPS yang Melibatkan Mahasiswa</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Penelitian DTPS yang Menjadi Rujukan Tema
+                                                Tesis/Disertasi</span>
                                         </a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="collapse" href="#charts">
-                                <i class="far fa-chart-bar"></i>
-                                <p>Charts</p>
-                                <span class="caret"></span>
-                            </a>
-                            <div class="collapse" id="charts">
-                                <ul class="nav nav-collapse">
-                                    <li>
-                                        <a href="charts/charts.html">
-                                            <span class="sub-item">Chart Js</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="charts/sparkline.html">
-                                            <span class="sub-item">Sparkline</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a data-toggle="modal" data-target="#loginModal">
+                            <a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
                                 <p>Login</p>
                             </a>
