--- a/frontend/before_login/index.html
+++ b/frontend/before_login/index.html
@@ -138,7 +138,7 @@
                             <div class="collapse" id="table_two">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="./table_two/seleksi_mahasiswa.html">
                                             <span class="sub-item">Seleksi Mahasiswa</span>
                                         </a>
                                     </li>
