--- a/frontend/before_login/table_one/pendidikan.html
+++ b/frontend/before_login/table_one/pendidikan.html
@@ -99,8 +99,8 @@
                             </span>
                         </li>
                         <li class="nav-item">
-                            <a href="../index.html">
-                                <i class="fas fa-tachometer-alt"></i>
+                            <a href="index.html">
+                                <i class="fas fa-tachometer-alt active"></i>
                                 <p>Dashboard</p>
                             </a>
                         </li>
@@ -139,7 +139,7 @@
                             <div class="collapse" id="table_two">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="../table_two/seleksi_mahasiswa.html">
                                             <span class="sub-item">Seleksi Mahasiswa</span>
                                         </a>
                                     </li>
@@ -190,11 +190,123 @@
                                             <span class="sub-item">Pengakuan/Rekognisi Dosen</span>
                                         </a>
                                     </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Penelitian DTPS</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">PkM DTPS</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Publikasi Ilmiah DTPS</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Pagelaran/Pameran/Presentasi/Publikasi Ilmiah
+                                                DTPS</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Karya Ilmiah DTPS yang Disitasi</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Produk/Jasa DTPS yang Diadopsi oleh
+                                                Industri/Masyarakat</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Paten, Paten
+                                                Sederhana)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Hak Cipta,
+                                                Desain Produk Industri, dll.)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - Teknologi Tepat Guna,
+                                                Produk, Karya Seni, Rekayasa Sosial</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - Buku ber-ISBN, Book
+                                                Chapter</span>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a data-toggle="modal" data-target="#loginModal">
+                            <a href="#">
+                                <i class="fas fa-money-bill-alt"></i>
+                                <p>Penggunaan Dana</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a data-toggle="collapse" href="#table_five">
+                                <i class="fas fa-book-reader"></i>
+                                <p>Kurikulum</p>
+                                <span class="caret"></span>
+                            </a>
+                            <div class="collapse" id="table_five">
+                                <ul class="nav nav-collapse">
+                                    <li>
+                                        <a href="pendidikan.html">
+                                            <span class="sub-item">Kurikulum, Capaian Pembelajaran, dan Rencana
+                                                Pembelajaran</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Integrasi Kegiatan Penelitian/PkM dalam
+                                                Pembelajaran</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Kepuasan Mahasiswa</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a data-toggle="collapse" href="#table_six">
+                                <i class="fas fa-bookmark"></i>
+                                <p>Penelitian</p>
+                                <span class="caret"></span>
+                            </a>
+                            <div class="collapse" id="table_six">
+                                <ul class="nav nav-collapse">
+                                    <li>
+                                        <a href="pendidikan.html">
+                                            <span class="sub-item">Penelitian DTPS yang Melibatkan Mahasiswa</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="penelitian.html">
+                                            <span class="sub-item">Penelitian DTPS yang Menjadi Rujukan Tema
+                                                Tesis/Disertasi</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">
                                 <i class="fas fa-arrow-circle-right"></i>
                                 <p>Login</p>
                             </a>
