--- a/frontend/before_login/table_three/pkm_dtps.html
+++ b/frontend/before_login/table_three/pkm_dtps.html
@@ -87,6 +87,7 @@
             </nav>
             <!-- End Navbar -->
         </div>
+
         <!-- Sidebar -->
         <div class="sidebar sidebar-style-2" data-background-color="blue2">
             <div class="sidebar-wrapper scrollbar scrollbar-inner">
@@ -112,17 +113,17 @@
                             <div class="collapse" id="table_one">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="../table_one/pendidikan.html">
                                             <span class="sub-item">Pendidikan</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_one/penelitian.html">
                                             <span class="sub-item">Penelitian</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="pengabdian.html">
+                                        <a href="../table_one/pengabdian.html">
                                             <span class="sub-item">Pengabdian Masyarakat</span>
                                         </a>
                                     </li>
@@ -138,12 +139,12 @@
                             <div class="collapse" id="table_two">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="../table_two/seleksi_mahasiswa.html">
+                                        <a href="seleksi_mahasiswa.html">
                                             <span class="sub-item">Seleksi Mahasiswa</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="../table_two/mahasiswa_asing.html">
+                                        <a href="mahasiswa_asing.html">
                                             <span class="sub-item">Mahasiswa Asing</span>
                                         </a>
                                     </li>
@@ -159,88 +160,88 @@
                             <div class="collapse" id="table_three">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="../table_three/dosen_tetap_perguruan.html">
+                                        <a href="dosen_tetap_perguruan.html">
                                             <span class="sub-item"> Dosen Tetap Perguruan Tinggi</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="dosen_pembimbing_utama.html">
                                             <span class="sub-item">Dosen Pembimbing Utama Tugas Akhir</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="ekuivalen_waktu_mengajar.html">
                                             <span class="sub-item">Ekuivalen Waktu Mengajar Penuh (EWMP) Dosen Tetap
                                                 Perguruan Tinggi</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="dosen_tidak_tetap.html">
                                             <span class="sub-item">Dosen Tidak Tetap</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="dosen_industri.html">
                                             <span class="sub-item">Dosen Industri/Praktisi</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="pengakuan.html">
                                             <span class="sub-item">Pengakuan/Rekognisi Dosen</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="penelitian_dtps.html">
                                             <span class="sub-item">Penelitian DTPS</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="pkm_dtps.html">
                                             <span class="sub-item">PkM DTPS</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="publikasi_ilmiah.html">
                                             <span class="sub-item">Publikasi Ilmiah DTPS</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="pagelaran.html">
                                             <span class="sub-item">Pagelaran/Pameran/Presentasi/Publikasi Ilmiah
                                                 DTPS</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="karya_ilmiah.html">
                                             <span class="sub-item">Karya Ilmiah DTPS yang Disitasi</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="produk.html">
                                             <span class="sub-item">Produk/Jasa DTPS yang Diadopsi oleh
                                                 Industri/Masyarakat</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="luaran_penelitian.html">
                                             <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Paten, Paten
                                                 Sederhana)</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="luaran_penelitian_two.html">
                                             <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Hak Cipta,
                                                 Desain Produk Industri, dll.)</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="luaran_penelitian_three.html">
                                             <span class="sub-item">Luaran Penelitian/PkM Lainnya - Teknologi Tepat Guna,
                                                 Produk, Karya Seni, Rekayasa Sosial</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="luaran_penelitian_four.html">
                                             <span class="sub-item">Luaran Penelitian/PkM Lainnya - Buku ber-ISBN, Book
                                                 Chapter</span>
                                         </a>
@@ -319,7 +320,7 @@
             <div class="content">
                 <div class="page-inner">
                     <div class="page-header">
-                        <h4 class="page-title">Pendidikan</h4>
+                        <h4 class="page-title">PkM DTPS</h4>
                         <ul class="breadcrumbs">
                             <li class="nav-home">
                                 <a href="#">
@@ -330,13 +331,13 @@
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Kerjasama Tridharma</a>
+                                <a href="#">Dosen</a>
                             </li>
                             <li class="separator">
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Pendidikan</a>
+                                <a href="#">PkM DTPS</a>
                             </li>
                         </ul>
                     </div>
@@ -344,25 +345,21 @@
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="card-header">
-                                    <div class="card-title">Kerjasama Tridharma - Pendidikan</div>
+                                    <div class="card-title">Dosen - PkM DTPS</div>
                                 </div>
                                 <div class="card-body">
                                     <table
-                                        class="table table-bordered table-responsive border-top border-left border-right table-add"
+                                        class="table table-bordered table-responsive-md border-top border-left border-right table-add"
                                         style="white-space: nowrap;">
                                         <thead align="center">
                                             <th rowspan="2">No</th>
-                                            <th rowspan="2">Lembaga Mitra</th>
-                                            <th colspan="3">Tingkat *)</th>
-                                            <th rowspan="2">Judul Kegiatan Kerjasama</th>
-                                            <th rowspan="2">Manfaat bagi PS yang Diakreditasi</th>
-                                            <th rowspan="2">Waktu dan Durasi</th>
-                                            <th rowspan="2">Bukti Kerjasama</th>
-                                            <th rowspan="2">Tahun Berakhirnya Kerjasama (YYYY)</th>
+                                            <th rowspan="2">Sumber Pembiayaan</th>
+                                            <th colspan="3">Jumlah Judul Penelitian</th>
+                                            <th rowspan="3">Jumlah</th>
                                             <tr>
-                                                <th>Internasional</th>
-                                                <th>Nasional</th>
-                                                <th>Wilayah</th>
+                                                <th>TS-2</th>
+                                                <th>TS-1</th>
+                                                <th>TS</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -373,25 +370,38 @@
                                                 <td>4</td>
                                                 <td>5</td>
                                                 <td>6</td>
-                                                <td>7</td>
-                                                <td>8</td>
-                                                <td>9</td>
-                                                <td>10</td>
                                             </tr>
-                                            <tr>
+                                            <tr align="center">
                                                 <td>1</td>
-                                                <td>Nuvoton Technology Corporation</td>
-                                                <td align="center">✅</td>
+                                                <td align="justify">a) Perguruan tinggi <br>
+                                                    b) Mandiri</td>
+                                                <td>6</td>
+                                                <td>5</td>
+                                                <td>5</td>
+                                                <td>16</td>
+                                            </tr>
+                                            <tr align="center">
+                                                <td>2</td>
+                                                <td align="justify">a) Lembaga dalam negeri (diluar PT)</td>
+                                                <td>3</td>
+                                                <td>3</td>
+                                                <td>3</td>
+                                                <td>9</td>
+                                            </tr>
+                                            <tr align="center">
+                                                <td>3</td>
+                                                <td align="justify">Lembaga luar negeri</td>
                                                 <td></td>
                                                 <td></td>
-                                                <td>Nuvoton Academic Program</td>
-                                                <td>Peningkatan Perbaikan materi Pembelajaran Matakuliah Computer and
-                                                    Device</td>
-                                                <td>2016-2018 , (2 Tahun)</td>
-                                                <td>Bukti Penyerahan 20 Mikrokontroler, Sertifikat Training of Trainer
-                                                </td>
-                                                <td>2018
-                                                </td>
+                                                <td></td>
+                                                <td>0</td>
+                                            </tr>
+                                            <tr align="center">
+                                                <td colspan="2" style="font-weight:bold;">Jumlah</td>
+                                                <td style="font-weight:bold;">9</td>
+                                                <td style="font-weight:bold;">8</td>
+                                                <td style="font-weight:bold;">8</td>
+                                                <td style="font-weight:bold;">25</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -419,7 +429,6 @@
     <!-- jQuery UI -->
     <script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="/assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
-
     <!-- jQuery Scrollbar -->
     <script src="/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 
@@ -427,58 +436,8 @@
     <!-- Chart JS -->
     <script src="/assets/js/plugin/chart.js/chart.min.js"></script>
 
-    <!-- jQuery Sparkline -->
-    <script src="/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
-
-    <!-- Chart Circle -->
-    <script src="/assets/js/plugin/chart-circle/circles.min.js"></script>
-
-    <!-- Datatables -->
-    <script src="/assets/js/plugin/datatables/datatables.min.js"></script>
-
-    <!-- Bootstrap Notify -->
-    <script src="/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
-
-    <!-- jQuery Vector Maps -->
-    <script src="/assets/js/plugin/jqvmap/jquery.vmap.min.js"></script>
-    <script src="/assets/js/plugin/jqvmap/maps/jquery.vmap.world.js"></script>
-
-    <!-- Sweet Alert -->
-    <script src="/assets/js/plugin/sweetalert/sweetalert.min.js"></script>
-
     <!-- Atlantis JS -->
     <script src="/assets/js/atlantis.min.js"></script>
-
-    <!-- Atlantis DEMO methods, don't include it in your project! -->
-    <script src="/assets/js/setting-demo.js"></script>
-    <script>
-        $('#lineChart').sparkline([102, 109, 120, 99, 110, 105, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
-        });
-
-        $('#lineChart2').sparkline([99, 125, 122, 105, 110, 124, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
-        });
-
-        $('#lineChart3').sparkline([105, 103, 123, 100, 95, 105, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
-        });
-    </script>
 </body>
 
 </html>
