--- a/frontend/before_login/table_one/pengabdian.html
+++ b/frontend/before_login/table_one/pengabdian.html
@@ -39,7 +39,7 @@
     <div class="wrapper">
         <div class="main-header">
             <!-- Logo Header -->
-            <div class="logo-header" data-background-color="dark2">
+            <div class="logo-header" data-background-color="blue2">
 
                 <a href="../index.html" class="logo">
                     <img src="/assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
@@ -60,7 +60,7 @@
             <!-- End Logo Header -->
 
             <!-- Navbar Header -->
-            <nav class="navbar navbar-header navbar-expand-lg" data-background-color="dark">
+            <nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
                 <div class="container-fluid">
                     <div class="collapse" id="search-nav">
                         <form class="navbar-left navbar-form nav-search mr-md-3">
@@ -88,7 +88,7 @@
         </div>
 
         <!-- Sidebar -->
-        <div class="sidebar sidebar-style-2" data-background-color="dark2">
+        <div class="sidebar sidebar-style-2" data-background-color="blue2">
             <div class="sidebar-wrapper scrollbar scrollbar-inner">
                 <div class="sidebar-content">
                     <ul class="nav nav-primary">
@@ -143,7 +143,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_two/mahasiswa_asing.html">
                                             <span class="sub-item">Mahasiswa Asing</span>
                                         </a>
                                     </li>
@@ -159,7 +159,7 @@
                             <div class="collapse" id="table_three">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="../table_three/dosen_tetap_perguruan.html">
                                             <span class="sub-item"> Dosen Tetap Perguruan Tinggi</span>
                                         </a>
                                     </li>
@@ -366,6 +366,18 @@
                                             </tr>
                                         </thead>
                                         <tbody>
+                                            <tr align="center" style="background-color: #D9D9D9;">
+                                                <td>1</td>
+                                                <td>2</td>
+                                                <td>3</td>
+                                                <td>4</td>
+                                                <td>5</td>
+                                                <td>6</td>
+                                                <td>7</td>
+                                                <td>8</td>
+                                                <td>9</td>
+                                                <td>10</td>
+                                            </tr>
                                             <tr>
                                                 <td>1</td>
                                                 <td>Nuvoton Technology Corporation</td>
