--- a/frontend/before_login/table_two/mahasiswa_asing.html
+++ b/frontend/before_login/table_two/mahasiswa_asing.html
@@ -87,6 +87,7 @@
             </nav>
             <!-- End Navbar -->
         </div>
+
         <!-- Sidebar -->
         <div class="sidebar sidebar-style-2" data-background-color="blue2">
             <div class="sidebar-wrapper scrollbar scrollbar-inner">
@@ -112,17 +113,17 @@
                             <div class="collapse" id="table_one">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="../table_one/pendidikan.html">
                                             <span class="sub-item">Pendidikan</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_one/penelitian.html">
                                             <span class="sub-item">Penelitian</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="pengabdian.html">
+                                        <a href="../table_one/pengabdian.html">
                                             <span class="sub-item">Pengabdian Masyarakat</span>
                                         </a>
                                     </li>
@@ -138,12 +139,12 @@
                             <div class="collapse" id="table_two">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="../table_two/seleksi_mahasiswa.html">
+                                        <a href="seleksi_mahasiswa.html">
                                             <span class="sub-item">Seleksi Mahasiswa</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="../table_two/mahasiswa_asing.html">
+                                        <a href="mahasiswa_asing.html">
                                             <span class="sub-item">Mahasiswa Asing</span>
                                         </a>
                                     </li>
@@ -319,7 +320,7 @@
             <div class="content">
                 <div class="page-inner">
                     <div class="page-header">
-                        <h4 class="page-title">Pendidikan</h4>
+                        <h4 class="page-title">Mahasiswa Asing</h4>
                         <ul class="breadcrumbs">
                             <li class="nav-home">
                                 <a href="#">
@@ -330,13 +331,13 @@
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Kerjasama Tridharma</a>
+                                <a href="#">Mahasiswa</a>
                             </li>
                             <li class="separator">
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Pendidikan</a>
+                                <a href="#">Mahasiswa Asing</a>
                             </li>
                         </ul>
                     </div>
@@ -344,25 +345,30 @@
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="card-header">
-                                    <div class="card-title">Kerjasama Tridharma - Pendidikan</div>
+                                    <div class="card-title">Mahasiswa - Mahasiswa Asing</div>
                                 </div>
                                 <div class="card-body">
                                     <table
-                                        class="table table-bordered table-responsive border-top border-left border-right table-add"
+                                        class="table table-bordered table-responsive-md border-top border-left border-right table-add"
                                         style="white-space: nowrap;">
                                         <thead align="center">
-                                            <th rowspan="2">No</th>
-                                            <th rowspan="2">Lembaga Mitra</th>
-                                            <th colspan="3">Tingkat *)</th>
-                                            <th rowspan="2">Judul Kegiatan Kerjasama</th>
-                                            <th rowspan="2">Manfaat bagi PS yang Diakreditasi</th>
-                                            <th rowspan="2">Waktu dan Durasi</th>
-                                            <th rowspan="2">Bukti Kerjasama</th>
-                                            <th rowspan="2">Tahun Berakhirnya Kerjasama (YYYY)</th>
+                                            <th rowspan="2">No.</th>
+                                            <th rowspan="2">Program Studi</th>
+                                            <th colspan="3">Jumlah Mahasiswa Aktif</th>
+                                            <th colspan="3" width="20px">Jumlah Mahasiswa Asing <br> Penuh Waktu
+                                                (Full-time)</th>
+                                            <th colspan="3">Jumlah Mahasiswa Asing <br> Paruh Waktu
+                                                (Part-time)</th>
                                             <tr>
-                                                <th>Internasional</th>
-                                                <th>Nasional</th>
-                                                <th>Wilayah</th>
+                                                <th>TS-2</th>
+                                                <th>TS-1</th>
+                                                <th>TS</th>
+                                                <th>TS-2</th>
+                                                <th>TS-1</th>
+                                                <th>TS</th>
+                                                <th>TS-2</th>
+                                                <th>TS-1</th>
+                                                <th>TS</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -377,21 +383,20 @@
                                                 <td>8</td>
                                                 <td>9</td>
                                                 <td>10</td>
+                                                <td>11</td>
                                             </tr>
-                                            <tr>
+                                            <tr align="center">
                                                 <td>1</td>
-                                                <td>Nuvoton Technology Corporation</td>
-                                                <td align="center">✅</td>
                                                 <td></td>
                                                 <td></td>
-                                                <td>Nuvoton Academic Program</td>
-                                                <td>Peningkatan Perbaikan materi Pembelajaran Matakuliah Computer and
-                                                    Device</td>
-                                                <td>2016-2018 , (2 Tahun)</td>
-                                                <td>Bukti Penyerahan 20 Mikrokontroler, Sertifikat Training of Trainer
-                                                </td>
-                                                <td>2018
-                                                </td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -419,7 +424,6 @@
     <!-- jQuery UI -->
     <script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="/assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
-
     <!-- jQuery Scrollbar -->
     <script src="/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 
@@ -427,58 +431,8 @@
     <!-- Chart JS -->
     <script src="/assets/js/plugin/chart.js/chart.min.js"></script>
 
-    <!-- jQuery Sparkline -->
-    <script src="/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
-
-    <!-- Chart Circle -->
-    <script src="/assets/js/plugin/chart-circle/circles.min.js"></script>
-
-    <!-- Datatables -->
-    <script src="/assets/js/plugin/datatables/datatables.min.js"></script>
-
-    <!-- Bootstrap Notify -->
-    <script src="/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
-
-    <!-- jQuery Vector Maps -->
-    <script src="/assets/js/plugin/jqvmap/jquery.vmap.min.js"></script>
-    <script src="/assets/js/plugin/jqvmap/maps/jquery.vmap.world.js"></script>
-
-    <!-- Sweet Alert -->
-    <script src="/assets/js/plugin/sweetalert/sweetalert.min.js"></script>
-
     <!-- Atlantis JS -->
     <script src="/assets/js/atlantis.min.js"></script>
-
-    <!-- Atlantis DEMO methods, don't include it in your project! -->
-    <script src="/assets/js/setting-demo.js"></script>
-    <script>
-        $('#lineChart').sparkline([102, 109, 120, 99, 110, 105, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
-        });
-
-        $('#lineChart2').sparkline([99, 125, 122, 105, 110, 124, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
-        });
-
-        $('#lineChart3').sparkline([105, 103, 123, 100, 95, 105, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
-        });
-    </script>
 </body>
 
 </html>
