--- a/frontend/before_login/table_two/seleksi_mahasiswa.html
+++ b/frontend/before_login/table_two/seleksi_mahasiswa.html
@@ -144,7 +144,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="mahasiswa_asing.html">
                                             <span class="sub-item">Mahasiswa Asing</span>
                                         </a>
                                     </li>
@@ -160,7 +160,7 @@
                             <div class="collapse" id="table_three">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="../table_three/dosen_tetap_perguruan.html">
                                             <span class="sub-item"> Dosen Tetap Perguruan Tinggi</span>
                                         </a>
                                     </li>
@@ -378,14 +378,62 @@
                                                 <td>8</td>
                                             </tr>
                                             <tr align="center">
+                                                <td>TS-4</td>
+                                                <td>40</td>
+                                                <td>44</td>
+                                                <td>44</td>
+                                                <td>20</td>
+                                                <td>0</td>
+                                                <td>81</td>
                                                 <td>1</td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
+                                            </tr>
+                                            <tr align="center">
+                                                <td>TS-3</td>
+                                                <td>40</td>
+                                                <td>30</td>
+                                                <td>27</td>
+                                                <td>23</td>
+                                                <td>0</td>
+                                                <td>80</td>
+                                                <td>0</td>
+                                            </tr>
+                                            <tr align="center">
+                                                <td>TS-2 </td>
+                                                <td>40</td>
+                                                <td>38</td>
+                                                <td>27</td>
+                                                <td>23</td>
+                                                <td>0</td>
+                                                <td>63</td>
+                                                <td>0</td>
+                                            </tr>
+                                            <tr align="center">
+                                                <td>TS-1</td>
+                                                <td>40</td>
+                                                <td>52</td>
+                                                <td>19</td>
+                                                <td>15</td>
+                                                <td>2</td>
+                                                <td>48</td>
+                                                <td>2</td>
+                                            </tr>
+                                            <tr align="center">
+                                                <td>TS</td>
+                                                <td>40</td>
+                                                <td>142</td>
+                                                <td>29</td>
+                                                <td>19</td>
+                                                <td>0</td>
+                                                <td>46</td>
+                                                <td>2</td>
+                                            </tr>
+                                            <tr align="center">
+                                                <td colspan="2" style="font-weight:bold;">Jumlah</td>
+                                                <td style="font-weight:bold;">306</td>
+                                                <td style="font-weight:bold;">154</td>
+                                                <td style="font-weight:bold;">94</td>
+                                                <td style="font-weight:bold;">2</td>
+                                                <td colspan="2" style="font-weight:bold;">48</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -395,7 +443,7 @@
                                                 <div class="card-header">
                                                     <div class="card-title">Jumlah Pendaftar</div>
                                                 </div>
-                                                <div class="card-body">
+                                                <div class="card-body ">
                                                     <div class="chart-container">
                                                         <canvas id="barOne"></canvas>
                                                     </div>
@@ -439,7 +487,7 @@
                                                 </div>
                                                 <div class="card-body">
                                                     <div class="chart-container">
-                                                        <div id="chartdiv"></div>
+                                                        <canvas id="barFour"></canvas>
                                                     </div>
                                                 </div>
                                             </div>
@@ -461,126 +509,6 @@
             </footer>
         </div>
     </div>
-    <style>
-        #chartdiv {
-            width: 100%;
-            height: 500px;
-        }
-    </style>
-
-    <!-- Resources -->
-    <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
-    <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
-    <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
-
-    <!-- Chart code -->
-    <script>
-        am4core.ready(function () {
-
-            // Themes begin
-            am4core.useTheme(am4themes_animated);
-            // Themes end
-
-            // Create chart instance
-            var chart = am4core.create("chartdiv", am4charts.XYChart3D);
-
-            // Add data
-            chart.data = [{
-                "country": "USA",
-                "visits": 4025
-            }, {
-                "country": "China",
-                "visits": 1882
-            }, {
-                "country": "Japan",
-                "visits": 1809
-            }, {
-                "country": "Germany",
-                "visits": 1322
-            }, {
-                "country": "UK",
-                "visits": 1122
-            }, {
-                "country": "France",
-                "visits": 1114
-            }, {
-                "country": "India",
-                "visits": 984
-            }, {
-                "country": "Spain",
-                "visits": 711
-            }, {
-                "country": "Netherlands",
-                "visits": 665
-            }, {
-                "country": "Russia",
-                "visits": 580
-            }, {
-                "country": "South Korea",
-                "visits": 443
-            }, {
-                "country": "Canada",
-                "visits": 441
-            }, {
-                "country": "Brazil",
-                "visits": 395
-            }, {
-                "country": "Italy",
-                "visits": 386
-            }, {
-                "country": "Australia",
-                "visits": 384
-            }, {
-                "country": "Taiwan",
-                "visits": 338
-            }, {
-                "country": "Poland",
-                "visits": 328
-            }];
-
-            // Create axes
-            let categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
-            categoryAxis.dataFields.category = "country";
-            categoryAxis.renderer.labels.template.rotation = 270;
-            categoryAxis.renderer.labels.template.hideOversized = false;
-            categoryAxis.renderer.minGridDistance = 20;
-            categoryAxis.renderer.labels.template.horizontalCenter = "right";
-            categoryAxis.renderer.labels.template.verticalCenter = "middle";
-            categoryAxis.tooltip.label.rotation = 270;
-            categoryAxis.tooltip.label.horizontalCenter = "right";
-            categoryAxis.tooltip.label.verticalCenter = "middle";
-
-            let valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
-            valueAxis.title.text = "Countries";
-            valueAxis.title.fontWeight = "bold";
-
-            // Create series
-            var series = chart.series.push(new am4charts.ColumnSeries3D());
-            series.dataFields.valueY = "visits";
-            series.dataFields.categoryX = "country";
-            series.name = "Visits";
-            series.tooltipText = "{categoryX}: [bold]{valueY}[/]";
-            series.columns.template.fillOpacity = .8;
-
-            var columnTemplate = series.columns.template;
-            columnTemplate.strokeWidth = 2;
-            columnTemplate.strokeOpacity = 1;
-            columnTemplate.stroke = am4core.color("#FFFFFF");
-
-            columnTemplate.adapter.add("fill", function (fill, target) {
-                return chart.colors.getIndex(target.dataItem.index);
-            })
-
-            columnTemplate.adapter.add("stroke", function (stroke, target) {
-                return chart.colors.getIndex(target.dataItem.index);
-            })
-
-            chart.cursor = new am4charts.XYCursor();
-            chart.cursor.lineX.strokeOpacity = 0;
-            chart.cursor.lineY.strokeOpacity = 0;
-
-        }); // end
-    </script>
     <!--   Core JS Files   -->
     <script src="/assets/js/core/jquery.3.2.1.min.js"></script>
     <script src="/assets/js/core/popper.min.js"></script>
@@ -589,7 +517,6 @@
     <!-- jQuery UI -->
     <script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="/assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
-
     <!-- jQuery Scrollbar -->
     <script src="/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 
@@ -597,30 +524,20 @@
     <!-- Chart JS -->
     <script src="/assets/js/plugin/chart.js/chart.min.js"></script>
 
-    <!-- jQuery Sparkline -->
-    <script src="/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
-
-    <!-- Chart Circle -->
-    <script src="/assets/js/plugin/chart-circle/circles.min.js"></script>
-
-
     <!-- Atlantis JS -->
     <script src="/assets/js/atlantis.min.js"></script>
-
-    <!-- Atlantis DEMO methods, don't include it in your project! -->
-    <script src="/assets/js/setting-demo.js"></script>
     <script>
         barOne = document.getElementById('barOne').getContext('2d');
         barTwo = document.getElementById('barTwo').getContext('2d');
         var myBarChartOne = new Chart(barOne, {
             type: 'bar',
             data: {
-                labels: ["Jan", "Feb", "Mar", "Apr", "May"],
+                labels: ["TS-1", "TS-2", "TS"],
                 datasets: [{
                     data: [3, 7, 4],
                     backgroundColor: 'rgb(23, 125, 255)',
                     borderColor: 'rgb(23, 125, 255)',
-                }, ]
+                }, ],
             },
             options: {
                 responsive: true,
@@ -632,28 +549,37 @@
                         }
                     }]
                 },
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function (tooltipItem) {
+                            return tooltipItem.yLabel;
+                        }
+                    }
+                }
             }
         });
         var myBarChart = new Chart(barTwo, {
             type: 'bar',
             data: {
-                labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
+                labels: ["TS-4", "TS-3", "TS-2", "TS-1", "TS"],
                 datasets: [{
                         label: "Blue",
-                        data: [3, 7, 4],
+                        data: [3, 7, 4, 5, 8],
                         backgroundColor: 'rgb(23, 125, 255)',
                         borderColor: 'rgb(23, 125, 255)',
                     },
                     {
                         label: "Red",
-                        data: [4, 3, 5],
+                        data: [4, 3, 5, 10, 6],
                         backgroundColor: "red",
-
                         borderColor: 'rgb(23, 125, 255)',
                     },
                     {
                         label: "Green",
-                        data: [7, 2, 6],
+                        data: [7, 2, 6, 4, 6],
                         backgroundColor: "green",
                     }
                 ]
@@ -668,6 +594,81 @@
                         }
                     }]
                 },
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function (tooltipItem) {
+                            return tooltipItem.yLabel;
+                        }
+                    }
+                }
+
+            }
+        });
+        var myBarChartOne = new Chart(barThree, {
+            type: 'bar',
+            data: {
+                labels: ["TS-4", "TS-3", "TS-2", "TS-1", "TS"],
+                datasets: [{
+                    data: [3, 7, 4, 5, 8],
+                    backgroundColor: "red",
+                    borderColor: 'rgb(23, 125, 255)',
+                }, ],
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                },
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function (tooltipItem) {
+                            return tooltipItem.yLabel;
+                        }
+                    }
+                }
+            }
+        });
+        var myBarChartOne = new Chart(barFour, {
+            type: 'bar',
+            data: {
+                labels: ["TS-4", "TS-3", "TS-2", "TS-1", "TS"],
+                datasets: [{
+                    data: [100, 90, 70, 80, 60],
+                    backgroundColor: "green",
+                    borderColor: 'rgb(23, 125, 255)',
+                }, ],
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                },
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function (tooltipItem) {
+                            return tooltipItem.yLabel;
+                        }
+                    }
+                }
             }
         });
     </script>
